--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Traditional computer science algorithms and data structures implemented in JavaScript",
   "main": "index.js",
   "scripts": {
-    "test": "mocha -R nyan --recursive test"
+    "test": "mocha -R nyan --recursive test",
+    "cover": "node_modules/istanbul/lib/cli.js cover node_modules/mocha/bin/_mocha -- -R spec test/*"
+
   },
   "repository": {
     "type": "git",
@@ -28,6 +30,8 @@
   "homepage": "https://github.com/tahanebti/algoholic.js#readme",
   "devDependencies": {
     "chai": "^4.1.2",
+    "coveralls": "^3.0.0",
+    "istanbul": "^0.4.5",
     "mocha": "^4.0.1"
   }
 }
