--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha -R nyan --recursive test",
-    "cover": "node_modules/istanbul/lib/cli.js cover node_modules/mocha/bin/_mocha -- -R spec test/*"
-
+    "coverage": "istanbul cover ./node_modules/.bin/_mocha -- -R spec --recursive ./test"
   },
   "repository": {
     "type": "git",
