--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,8 @@
 language: node_js
+sudo: false
 node_js:
-  - stable
-install:
-  - npm install
-
-script:
-  - npm run cover
-
-# Send coverage data to Coveralls
-after_script: "cat coverage/lcov.info | node_modules/coveralls/bin/coveralls.js"
+  - '6'
+  - '7'
+  - '8'
+script: "make"
+after_success: "make coveralls"
