--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
 language: node_js
-sudo: false
 node_js:
-  - '6'
-  - '7'
-  - '8'
-script: "make"
-after_success: "make coveralls"
+  - stable
+install:
+  - npm install
+
+script:
+  - npm run coveralls
+
+# Send coverage data to Coveralls
+after_script: "cat coverage/lcov.info | node_modules/coveralls/bin/coveralls.js"
